--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -95,7 +95,8 @@
   isbn = {978-1-78254-510-1},
   lccn = {JC497 .H35 2017},
   keywords = {Legitimacy of governments,Political participation,Political sociology},
-  annotation = {--- ![](https://www.e-elgar.com/shop/media/catalog/product/cache/01c740ac49768798d3ac9bd0cdac340f/9/7/9781782545101.jpg)}
+  annotation = {---\\
+![](https://www.e-elgar.com/shop/media/catalog/product/cache/01c740ac49768798d3ac9bd0cdac340f/9/7/9781782545101.jpg)}
 }
 
 @article{bascope_curricular_2015,
@@ -174,7 +175,8 @@
   urldate = {2021-12-14},
   abstract = {Este artículo es parte de un número especial de Temas de la Agenda Pública (de Políticas Públicas UC) donde se analizaron percepciones y preferencias sobre temas laborales en Chile con la Encuesta Bicentenario 2013. También se utilizaron datos de la encuesta Justicia y Participación Política del proyecto FONDECYT Social Justice and Citizenship Participation y del ISSP 2009.},
   langid = {spanish},
-  annotation = {--- [Reporte completo](https://politicaspublicas.uc.cl/publicacion/serie-temas-de-la-agenda/serie-no-66-encuesta-nacional-bicentenario-universidad-catolica-adimark-2013/)},
+  annotation = {---\\
+[Reporte completo](https://politicaspublicas.uc.cl/publicacion/serie-temas-de-la-agenda/serie-no-66-encuesta-nacional-bicentenario-universidad-catolica-adimark-2013/)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/B622NQRS/serie-no-66-encuesta-nacional-bicentenario-universidad-catolica-adimark-2013.html}
 }
 
@@ -187,7 +189,8 @@
   url = {https://github.com/juancarloscastillo/equal_pay/blob/master/castillo-et-al2019-analisis-del-anho.pdf},
   abstract = {Este artículo analiza los cambios en percepción  y justificación de la desigualdad económica en Chile entre 1999 y 2019 utilizando datos de la encuesta International Social Survey Programme.  También se analizan estos cambios en relación al nivel educacional y el estatus social subjetivo.},
   keywords = {Chile,just inequality,perceived inequality,salary gaps},
-  annotation = {--- [Github Repo](https://github.com/justicia-distributiva/chile-ISSP-gaps-1999-2019)}
+  annotation = {---\\
+[Github Repo](https://github.com/justicia-distributiva/chile-ISSP-gaps-1999-2019)}
 }
 
 @article{castillo_clivajes_2013a,
@@ -221,14 +224,15 @@
   url = {https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados},
   abstract = {El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
   keywords = {elsoc,social cohesion},
-  annotation = {--- [Github Repo](https://github.com/ocscoes/cohesion-cepal)
-
-{$<$}br{$>$}
-
-[Bookdown](https://cohesion-cepal.netlify.app/)
-
-{$<$}br{$>$}
-
+  annotation = {---\\
+[Github Repo](https://github.com/ocscoes/cohesion-cepal)\\
+\\
+{$<$}br{$>$}\\
+\\
+[Bookdown](https://cohesion-cepal.netlify.app/)\\
+\\
+{$<$}br{$>$}\\
+\\
 [Presentación](https://jc-castillo.com/publication/2022-01-01\_presentacion\_cohesio/)}
 }
 
@@ -244,27 +248,10 @@
   url = {https://github.com/ocscoes/concepto-medicion/blob/main/DT47.%20Conceptos%20y%20medici%C3%B3n%20de%20cohesi%C3%B3n%20social%20en%20proyectos%20internacionales.pdf},
   abstract = {Este documento tiene por objetivo describir y resumir diferentes aproximaciones conceptuales y metodológicas hacia el concepto de cohesión social. Originalmente fue desarrollado para servir como insumo en la generación del Observatorio de Cohesión Social (OCS) del Centro de Estudios de Conflicto y Cohesión Social (COES), cuyo objetivo es proponer indicadores de cohesión social con foco en América Latina basados en datos secundarios y permitir la realización de análisis en una plataforma interactiva.},
   keywords = {social cohesion},
-  annotation = {--- ISSN 0719-6660 [Github Repo](https://github.com/ocscoes/concepto-medicion) ![](https://raw.githubusercontent.com/ocscoes/concepto-medicion/main/portada.png)}
-}
-
-@misc{castillo_concepts_2021,
-  type = {3rd Akademie für Soziologie (AS) Conference: Cohesive Societies? Analytical-empirical Perspectives},
-  title = {Concepts and measurement of social cohesion in international perspective},
-  author = {Castillo, Juan-Carlos and Carrasco, Kevin and Cáceres, Ignacio},
-  year = {2021},
-  month = sep,
-  address = {Leipzig (Online)},
-  url = {https://ocscoes.github.io/presentaciones/presentation-cohesive-societies.html},
-  abstract = {The measurement of social cohesion has been a challenge for decades. A main issue behind this challenge is the definition of social cohesion, which is far from being consensual and has led to different proposals for operationalization and measurement. Nevertheless, to our knowledge the approaches to the measurement of social cohesion have not been contrasted with each other in a systematic way, making the assessment and comparison of social cohesion indicators and indexes a difficult task. In the present paper we describe and compare several international projects aimed at conceptualizing and measuring social cohesion, such as the Social Cohesion Radar (Germany/international), the Scanlon-Monash Social Cohesion Index (Australia), ECOSOCIAL (Latin America), Mapping Social Cohesion (Canada) and the Civic Engagement and Social Cohesion report (USA). Through this comparison we identify the main commonalities as well as the disparities among these different projects. Based on this analysis we propose a simplified version for measuring social cohesion at aggregated level.},
-  annotation = {--- \# Documento de presentación
-
-(F para pantalla completa) {$<$}iframe width="700"  height="450" src="https://ocscoes.github.io/presentaciones/presentation-cohesive-societies.html" title="Xaringan presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}
-
-\# Extended abstract
-
-{$<$}iframe width="700"  height="450" src="https://www.dropbox.com/s/sn0efav12iqfb31/castillo\%2C\%20caceres\%20\%26\%20carrasco\%202021\%20concepts\%20and\%20measurement\%20social\%20cohesion.pdf?raw=1" title="Extended abstract" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}
-
-[Conference web](https://cohesivesocieties.net/)}
+  annotation = {---\\
+ISSN 0719-6660\\
+[Github Repo](https://github.com/ocscoes/concepto-medicion)\\
+![](https://raw.githubusercontent.com/ocscoes/concepto-medicion/main/portada.png)}
 }
 
 @techreport{castillo_contrastes_2012,
@@ -282,7 +269,8 @@
   abstract = {Aproximaciones tradicionales desde la ciencia política señalan que la desigualdad económica constituye un elemento desestabilizador de las democracias, en tanto merma las bases del contrato social y genera fuertes presiones para la redistribución, tensionando de paso la estabilidad institucional. Tal argumento da por sentado que los individuos son capaces de percibir la desigualdad adecuadamente, es decir, que existiría una correspondencia entre la desigualdad objetiva y subjetiva. Sin embargo, la evidencia empírica señala la existencia de una serie de sesgos en la percepción de la desigualdad (Castillo, Miranda y Carrasco, 2012), los cuales a su vez podrían influir en el impacto que la desigualdad tiene en la estabilidad institucional. En este contexto, cabe preguntarse: ¿En qué medida se percibe la desigualdad económica en Chile? ¿Existe consenso o disenso en la población respecto de los niveles de desigualdad? ¿Se percibe en Chile más o menos desigualdad que en otros países? El presente artículo aborda estas preguntas enfocándose en la desigualdad salarial desde dos ejes de análisis: comparación internacional y comparación temporal. El eje de comparación temporal aborda los niveles de consenso respecto de la desigualdad percibida en un lapso de 10 años, mientras la comparación internacional asocia la desigualdad percibida a indicadores de desigualdad económica en una serie de países. Para el análisis se utiliza el módulo de desigualdad del International Social Survey Programme 1999 (N=1.503) y 2009 (N=1.505), encuesta especializada en temas de desigualdad económica.},
   langid = {spanish},
   keywords = {just inequality,perceived inequality,salary gaps},
-  annotation = {--- ![](/images/contrastes-temas-agenda-publica.png)},
+  annotation = {---\\
+![](/images/contrastes-temas-agenda-publica.png)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/R56TTRNJ/serie-n-57-contrastes-entre-la-desigualdad-economica-objetiva-y-subjetiva-en-chile.html}
 }
 
@@ -344,8 +332,9 @@
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
   keywords = {citizenship education,ICCS},
-  annotation = {--- Proyecto Fondecyt Formación Ciudadana I
-
+  annotation = {---\\
+Proyecto Fondecyt Formación Ciudadana I\\
+\\
 ![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
 }
 
@@ -398,7 +387,9 @@
   url = {https://ocscoes.github.io/cohesion-elsoc/index.html},
   abstract = {El objetivo de este informe es responder a un requerimiento que busca identificar los principales indicadores presentes en el Estudio Longitudinal Social de Chile (ELSOC) que permitan operacionalizar y medir el concepto de cohesión social a partir de una revisión sistemática de distintas propuestas y experiencias de estudios internacionales. Para ello, toma como principal referencia el documento de trabajo Conceptos y medición de cohesión social en proyectos internacionales de COES (Castillo et al., 2021). En primer lugar, se generará una sistematización de las principales propuestas de dimensiones, subdimensiones e indicadores bajo los cuales se ha medido cohesión social a nivel internacional, señalando las principales similitudes y diferencias entre cada estudio. En segundo lugar, se analizará en qué medida las principales dimensiones y subdimensiones de cohesión social son posibles de operacionalizar con indicadores presentes en ELSOC. Para ello, se elaborarán dos insumos principales. Por un lado, una planilla que presenta la sistematización general de las dimensiones, subdimensiones e indicadores de ELSOC y la fuente de información desde dónde proviene el planteamiento de medición de la variable y, por otro lado, un documento escrito que sintetiza esta sistematización de dimensiones, subdimensiones e indicadores de manera detallada.},
   keywords = {social cohesion},
-  annotation = {--- ISSN 0719-6660 [Github Repo](https://github.com/ocscoes/cohesion-elsoc)}
+  annotation = {---\\
+ISSN 0719-6660\\
+[Github Repo](https://github.com/ocscoes/cohesion-elsoc)}
 }
 
 @incollection{castillo_impuestos_2021,
@@ -414,8 +405,9 @@
   abstract = {El presente capítulo busca aportar los estudios de opinión pública sobre los impuestos, exponiendo el cambio de las preferencias y percepciones de los chilenos frente a la tributación progresiva. Desde el marco interpretativo de la economía moral, centrada en las normas culturales, se puede esperar que las opiniones de los ciudadanos frente a los impuestos progresivos se vean asociadas a sus creencias sobre el rol del estado, sus preferencias sobre el acceso igualitario a servicios sociales y sus creencias meritocráticas. Los resultados indican que, si bien las preferencias por impuestos progresivos son mayoritarias, han disminuido desde el año 1999 hasta la fecha, contrastando con un aumento en la crítica a la desigualdad. Se concluye que las diferencias esperables en opiniones sobre los impuestos según nivel socioeconómico, posición política y creencias meritocráticas no poseen asidero en el caso chileno. Más aún, se observa una tendencia al consenso entre distintas posiciones sobre la necesidad de una política tributaria más progresiva.},
   isbn = {978-956-289-241-4},
   keywords = {meritocracy,redistributive preferences},
-  annotation = {--- ![](/images/impuestos-justos.jpg)
-
+  annotation = {---\\
+![](/images/impuestos-justos.jpg)\\
+\\
 [Website](https://www.impuestosjustos.io/)}
 }
 
@@ -487,7 +479,8 @@
   address = {Boca R.,FL},
   abstract = {This research is an empirical study of the legitimacy of economic inequality with a focus on the case of Chile. Chile is an appealing case study in this regard because it has been one of the countries with the highest indexes of economic inequality over the past several decades. Theoretical perspectives based on the rational interest of the median voter have pointed out a negative association between high levels of inequality and legitimacy. Nevertheless, empirical evidence indicates that an unequal distribution of income is not necessarily challenged by the majority of a society, a phenomenon associated with the concept of legitimacy of economic inequality. Most empirical studies of this topic to date have considered social contexts that are not characterized by (comparatively) high levels of income inequality; thus, the impact of the level of inequality on its legitimacy remains largely unclear. The present study aimed at bridging this research gap, guided by the question: How do high levels of income inequality in a society influence the legitimacy of economic inequality? Using data obtained by comparative public opinion projects including the International Social Survey Program (ISSP) and the International Social Justice Project (ISJP), this research considered individual preferences for occupational earnings inequality (the just earnings gap) as the main object of study. The central hypothesis was that individual preferences are strongly influenced by contextual standards such as the current income distribution, leading individuals of countries with high levels of inequality to have stronger average preferences for economic inequality (the so-called existential argument). Empirical evidence of legitimacy was related to two central dimensions based on David Beetham's multidimensional concept of legitimacy: (a) consensus regarding the inequality in the distribution of earnings in Chile and (b) the impact of the country level of income inequality on individual preferences for a larger just earnings gap. The empirical analysis provided partial evidence regarding the consensus about inequality in Chile, whereas in an international comparative framework, countries with higher levels of income inequality showed a stronger preference for a larger just earnings gap.},
   isbn = {978-1-59942-376-0},
-  annotation = {--- ![](https://images-na.ssl-images-amazon.com/images/I/411OcS-XScL.\_SX382\_BO1,204,203,200\_.jpg)}
+  annotation = {---\\
+![](https://images-na.ssl-images-amazon.com/images/I/411OcS-XScL.\_SX382\_BO1,204,203,200\_.jpg)}
 }
 
 @article{castillo_legitimacy_2011a,
@@ -543,7 +536,8 @@
   abstract = {Large-scale international studies focus most of their efforts on measuring knowledge as academic achievement. For this reason, more attitudinal instruments, such as questionnaires for students, teachers, and principals, are left in an instead auxiliary role. In the case of the International Civic and Citizenship Education Study (ICCS) 2009, in addition to measuring civic knowledge as academic achievement, a series of relevant instruments are considered within the concept of citizenship, aimed at measuring attitudes, beliefs, and behaviours. To encourage the use of the ICCS database incorporates’ variables built based on composite indices (estimated with Item Response Theory [IRT]) of those scales that address the same issue, such as trust in institutions, participation, school climate, attitudes towards ethnic minorities, among others. Frequently ICCS’s variables are used as they come in the database without stopping to analyse or problematize the validity of these measurements and their consequences in terms of contrasting hypotheses. Using the scale of attitudes towards equal rights between men and women, this chapter begins by describing, in general terms, the characteristics of ICCS and then moves on to factor analyses that show the possible validity problems that can arise from the use of the scores proposed by ICCS. The conclusions address the implications in terms of validity.},
   isbn = {978-3-030-78390-7},
   langid = {english},
-  annotation = {--- ![](https://media.springernature.com/w306/springer-static/cover-hires/book/978-3-030-78390-7)},
+  annotation = {---\\
+![](https://media.springernature.com/w306/springer-static/cover-hires/book/978-3-030-78390-7)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/ZFQDFCH3/Castillo et al. - 2021 - Measuring Attitudes Towards Gender Equality in Int.pdf}
 }
 
@@ -557,7 +551,8 @@
   urldate = {2020-06-19},
   langid = {american},
   keywords = {submitted},
-  annotation = {--- [OSF Preregistration](https://osf.io/z45y2)[Github Repo](https://github.com/justicia-distributiva/merit-scale)},
+  annotation = {---\\
+[OSF Preregistration](https://osf.io/z45y2)[Github Repo](https://github.com/justicia-distributiva/merit-scale)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/L9LCDDBB/z45y2.html}
 }
 
@@ -575,7 +570,8 @@
   isbn = {978-956-14-2471-5},
   langid = {spanish},
   keywords = {citizenship education,iccs},
-  annotation = {--- ![](/images/validez-mide.jpeg)}
+  annotation = {---\\
+![](/images/validez-mide.jpeg)}
 }
 
 @article{castillo_meritocracia_2019,
@@ -626,8 +622,8 @@
   volume = {Online first},
   doi = {10.1080/00207659.2023.2274712},
   abstract = {A great part of the comparative international research that has attempted to measure meritocratic beliefs has used the social inequality module of the ISSP (International Social Survey Programme), which offers an unprecedented opportunity to compare meritocratic views in different societies. Based on a series of studies using ISSP data, the present paper proposes a multidimensional measurement framework for meritocratic beliefs. This framework dis- tinguishes, on the one side, between perceptions and preferences and, on the other side, between meritocratic and not meritocratic aspects. In the first study, we test the multidimensional framework for meritocratic beliefs using the ISSP 2009 inequality module through confirmatory factor analysis (CFA) techniques. After identify- ing the advantages and some limitations of ISSP items for a multidi- mensional operationalization of meritocratic beliefs, in a second study, we suggest a modified set of items that better taps the differ- ent dimensions of meritocracy. We examined the measuring proper- ties of this new instrument using a sample of Chilean adults (N ¼ 2,141). Based on these results, we recommend improvements in measuring meritocratic beliefs in cross-national studies.},
-  annotation = {---
-
+  annotation = {---\\
+\\
 ![](https://www.tandfonline.com/doi/cover-img/10.1080/mijs20.v053.i05)}
 }
 
@@ -681,7 +677,8 @@
   isbn = {978-956-9171-43-7},
   lccn = {HJ2535 .T75 2014},
   keywords = {Chile,issp,redistributive preferences,taxation},
-  annotation = {--- ![](https://images-na.ssl-images-amazon.com/images/I/51wuuYWFMbL.\_SX345\_BO1,204,203,200\_.jpg)}
+  annotation = {---\\
+![](https://images-na.ssl-images-amazon.com/images/I/51wuuYWFMbL.\_SX345\_BO1,204,203,200\_.jpg)}
 }
 
 @techreport{castillo_sobre_2010,
@@ -731,8 +728,21 @@
   abstract = {The COVID-19 pandemic has impacted social interactions and coexistence around the globe in dimensions that go far beyond health issues. In the case of the Global South, the pandemic has developed along with growing migratory flows, generating actual and potential threats to social cohesion. In effect, migrants have historically served as ‘scapegoats’ for unexpected crises as a way to control and manage diversity. Chile is nowadays one of the main destination focus for migration in the Latin American region, where recently certain COVID-19 outbreaks in migrant housing have intensified discrimination. In such a context, there is a need for understanding how the pandemic has potentially changed the way local nationals perceive migrant neighbors in terms of a threat to national identity, labor market participation and conviviality. Drawing on the national social cohesion panel survey study ELSOC (2016-2021, N= 2927) the main aim of this paper is to analyze the changes in attitudes towards migrants over the last years and their relation with individual status and territorial factors. The results indicate that Chileans perceive Latin American and Caribbean migrants more negatively after the pandemic, particularly those respondents with lower educational levels and who live in increasingly multicultural neighborhoods with higher rates of migrant residents},
   copyright = {add rights},
   lccn = {add call number},
-  annotation = {url\_pdf : ""  url\_project: "" url\_slides: "" url\_video: "" url\_poster: "" links: - icon: osf   icon\_pack: ai   name: Pre-registration   web: https://osf.io/7mspb - icon: github   icon\_pack: fab   name: Github   web: https://github.com/jciturras/frontiers-cohesion
-
+  annotation = {url\_pdf : "" \\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""\\
+links:\\
+- icon: osf\\
+  icon\_pack: ai\\
+  name: Pre-registration\\
+  web: https://osf.io/7mspb\\
+- icon: github\\
+  icon\_pack: fab\\
+  name: Github\\
+  web: https://github.com/jciturras/frontiers-cohesion\\
+\\
 ---}
 }
 
@@ -786,8 +796,9 @@
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
   keywords = {citizenship education,ICCS},
-  annotation = {--- Proyecto Fondecyt Formación Ciudadana I
-
+  annotation = {---\\
+Proyecto Fondecyt Formación Ciudadana I\\
+\\
 ![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
 }
 
@@ -837,7 +848,8 @@
   doi = {10.3389/fsoc.2022.806458},
   url = {https://doi.org/10.3389/fsoc.2022.806458},
   abstract = {In a developing and highly unequal region like Latin America, it is crucial to understand the determinants that affect people’s agreement with the redistribution of resources from the state. A series of theories focused on self-interest have continuously established a negative link between people’s income and their support for the reduction of inequalities through redistribution. Despite this, the evidence is scarce and sometimes contradictory while its study in Latin America is almost non-existent. Using data from the LAPOP Survey between 2008 and 2018, a longitudinal dimension is considered for the first time in the measurement of Latin American redistributive preferences, using hybrid multilevel regression models. In contrast to the evidence from studies conducted in other regions, the results reveal that in Latin America it is not possible to detect a clear association between income and redistributive preferences at specific times, but it is possible when changes occur in countries’ levels of inequality and economic development. Likewise, other elements that consistently affect preferences are evident, such as educational level, political ideology, and confidence in the political system. In light of this evidence, comparisons are made with previous research findings in industrialized countries, challenging rationalist theories of justice and solidarity.},
-  annotation = {--- [Github Repo](https://github.com/justicia-distributiva/redist\_lapop)},
+  annotation = {---\\
+[Github Repo](https://github.com/justicia-distributiva/redist\_lapop)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/A39KGTUG/Franetovic and Castillo - 2022 - Preferences for redistribution in unequal contexts.PDF}
 }
 
@@ -869,11 +881,19 @@
   volume = {53},
   doi = {https://econtent.hogrefe.com/doi/10.1027/1864-9335/a000498},
   abstract = {Perceptions of economic inequality (PEI) play a central role in people’s responses to inequality. We aim to examine the consistency between different PEI measures (income gaps, diagrammatic figures, experienced downward and upward disparities), their relationship with objective inequality, and their association with redistributive preferences. Using data from the International Social Survey Programme 2019 (N = 34,387, 22 countries), we performed multilevel regression analyses and found that PEI indicators were weakly and positively correlated, suggesting that they represent different dimensions of the same construct. Furthermore, objective inequality was not related to PEI measures. Finally, all PEI measures were positively associated with support for redistribution, except for experienced upward inequality. We discuss the multidimensional nature of PEI and its implications on redistributive preferences.},
-  annotation = {url\_pdf : "" url\_preprint: "" url\_dataset: "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: "" links: - icon: osf   icon\_pack: ai   name: Pre-registration   web: https://osf.io/muv9r/
-
----
-
--},
+  annotation = {url\_pdf : ""\\
+url\_preprint: ""\\
+url\_dataset: ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""\\
+links:\\
+- icon: osf\\
+  icon\_pack: ai\\
+  name: Pre-registration\\
+  web: https://osf.io/muv9r/\\
+---},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/KSIMHTFP/García-Castro et al. - 2022 - Perceived economic inequality measures Their refl.pdf}
 }
 
@@ -932,8 +952,8 @@
   doi = {10.24201/es.2023v41n122.2260},
   url = {https://jciturras.github.io/desigualdad_recom/paper.pdf},
   abstract = {Este estudio analiza el efecto de la información factual sobre desigualdad económica en la justificación de desigualdad salarial. Se implementó un diseño experimental a través de encuestas en una muestra representativa del área metropolitana de Santiago de Chile (n=732), con el objetivo de replicar los resultados reportados por Kriss-Stella Trump (2017) para el contexto de Suecia y Estados Unidos en torno a la justificación de brechas salariales. Nuestros resultados muestran que la información sobre salarios reales no impacta la justificación de la brecha salarial global. Sin embargo, se evidenció que la información sobre desigualdad salarial incrementa la justificación de brechas salarial según ocupaciones de alto y bajo estatus, lo cual es potenciado por la exposición conjunta a la condición que busca motivar la justificación del sistema social. Se discuten las limitantes metodológicas del estudio, en conjunto de las implicancias de la evidencia sobre el estudio sustantivo de actitudes hacia la desigualdad y la redistribución económica.},
-  annotation = {---
-
+  annotation = {---\\
+\\
 [Github repo](https://github.com/jciturras/desigualdad\_recom)}
 }
 
@@ -980,10 +1000,10 @@
   urldate = {2020-06-11},
   abstract = {Este es un reporte/pre-print breve sobre  preferencias redistributivas en Chile en contexto internacional y en el tiempo, utilizando datos como ISSP y LAPOP. Una versión de este reporte fue publicado en CIPER en 2019 en https://www.ciperchile.cl/2019/12/06/la-demanda-por-igualdad-y-los-caminos-que-cuentan-con-amplio-respaldo-ciudadano/ y también en OSF https://osf.io/g4ek8/},
   keywords = {distributive preferences,meritocracy},
-  annotation = {---
-
-[OSF project](https://osf.io/g4ek8/)
-
+  annotation = {---\\
+\\
+[OSF project](https://osf.io/g4ek8/)\\
+\\
  - [Artículo publicado en CIPER enn 2019](https://www.ciperchile.cl/2019/12/06/la-demanda-por-igualdad-y-los-caminos-que-cuentan-con-amplio-respaldo-ciudadano/)  [Github repo](https://github.com/justicia-distributiva/merit-redist-chile2019}
 }
 
@@ -1041,8 +1061,9 @@
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
   keywords = {citizenship education,ICCS},
-  annotation = {--- Proyecto Fondecyt Formación Ciudadana I
-
+  annotation = {---\\
+Proyecto Fondecyt Formación Ciudadana I\\
+\\
 ![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
 }
 
@@ -1061,8 +1082,8 @@
   abstract = {Based on the conceptualization of democratic principles in the International Civic and Citizenship Education Study (ICCS) 2009, particularly attitudes concerning equal rights for disadvantaged groups, such as immigrants, ethnic groups and women, this chapter evaluates the extent to which the scales measuring attitudes toward gender equality, equal rights for all ethnic/racial groups and equal rights for immigrants are invariant, and to what extent they can be compared across the countries participating in the study. Multi-group confirmatory factor analysis is used to estimate a measurement model of the egalitarian attitudes and its measurement equivalence across the 38 countries (n = 140,000 8th grade students) that participated in ICCS 2009. The results indicate that the original scales are non-invariant. Nevertheless, with some modifications, the proposed conceptual model was found to be invariant across countries. The chapter concludes with a discussion of the theoretical and empirical implications of the model.},
   isbn = {978-3-319-78691-9 978-3-319-78692-6},
   keywords = {citizenship education},
-  annotation = {---
-
+  annotation = {---\\
+\\
 ![](https://media.springernature.com/w306/springer-static/cover-hires/book/978-3-319-78692-6)}
 }
 
@@ -1083,8 +1104,8 @@
   isbn = {978-3-319-78692-6},
   langid = {english},
   keywords = {Attitudes toward diversity,citizenship education,International Civic and Citizenship Education Study (ICCS),International large-scale assessments,Multilevel structural equation models},
-  annotation = {---
-
+  annotation = {---\\
+\\
 ![](https://media.springernature.com/w306/springer-static/cover-hires/book/978-3-319-78692-6)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/NPZRREMD/Miranda et al. - 2018 - The Political Socialization of Attitudes Toward Eq.pdf}
 }
@@ -1102,10 +1123,11 @@
   urldate = {2021-12-15},
   abstract = {Trust in political institutions represents a central component of democratic systems. When citizens lack confidence in state bodies as the government and the parliament, the legitimacy of democracy is dangerously challenged. In the case of Latin America we observe a critical scenario, with a steady decrease of institutional trust in the last decade, accompanied by alarming levels of support for authoritarian regimes. Most of the evidence in this regards refers to adult population, leaving sidelined the young generations who certainly have a stake in the future of democracy in the region. Focusing on the role of the acquisition of civic knowledge at school as a protecting factor of democracy, this research analyzes the role of civic knowledge to understand trust in civic institutions and authoritarian attitudes in eighth-grade students. The data corresponds to the International Civic and Citizenship Education Study (ICCS) 2009 and 2016, in which seven Latin American Countries have participated. The results indicates a puzzling role of civic knowledge, as it diminishes trust in institutions but at the same time reduces authoritarian beliefs, in a similar way in the Latin American countries across time. The consequences for democracy and citizenship education are addressed in the conclusion.},
   isbn = {978-1-108-47775-8},
-  annotation = {--- ![](https://assets.cambridge.org/97811087/45093/cover/9781108745093.jpg)
-
-[Github repo](https://github.com/juancarloscastillo/authorit-trust\_iccs-lat) - 
-
+  annotation = {---\\
+![](https://assets.cambridge.org/97811087/45093/cover/9781108745093.jpg)\\
+\\
+[Github repo](https://github.com/juancarloscastillo/authorit-trust\_iccs-lat) - \\
+\\
 [Book Website](https://www.cambridge.org/core/books/psychology-of-democracy/87D5FCF7E4B87CE6E86A875E5ABBB416)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/8SQR4JSC/87D5FCF7E4B87CE6E86A875E5ABBB416.html}
 }
@@ -1143,7 +1165,9 @@
   address = {Ciudad de México},
   url = {/docs/torniquete-capitulo.pdf},
   isbn = {978-956-289-220-9},
-  annotation = {--- [Link to pdf](/docs/torniquete-capitulo.pdf) ![](/images/torniquete.png)}
+  annotation = {---\\
+[Link to pdf](/docs/torniquete-capitulo.pdf)\\
+![](/images/torniquete.png)}
 }
 
 @incollection{olivos_percepcion_2015,
@@ -1160,7 +1184,8 @@
   isbn = {978-956-01-0176-1},
   lccn = {HN110.5.A8 D39 2015},
   keywords = {encuesta bicentenario,Latin America,Social conditions,Social conflict,Toleration},
-  annotation = {--- ![](https://rileditores.com/internacional/wp-content/uploads/2020/03/9789560101761-1-scaled.jpg)}
+  annotation = {---\\
+![](https://rileditores.com/internacional/wp-content/uploads/2020/03/9789560101761-1-scaled.jpg)}
 }
 
 @article{preiss_argumentative_2013,
